change marker Filename

--- a/positioning.html
+++ b/positioning.html
@@ -29,7 +29,7 @@
             position: relative;
         }
         #marker{
-            background: url("marker_red_sprite.png");
+            background: url("marker_red.png");
             width: 19.5px;
             height: 25px;
             position: absolute;
