--- a/positioning.html
+++ b/positioning.html
@@ -5,39 +5,7 @@
     <title>positioning</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-        body,html{
-            padding: 0px;
-            margin: 0px;
-            height: 100%;
-        }
-        #app{
-            height: 100%;
-            user-select: none;
-        }
-        #positioning{
-            height: 100%;
-        }
-        #map {
-            width: 100%;
-            height: 100%;
-            margin:0;
-            font-family:"微软雅黑"
-        }
-        #mapBox{
-            height: 40%;
-            position: relative;
-        }
-        #marker{
-            background: url("marker_red.png");
-            width: 19.5px;
-            height: 25px;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-50%);
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./styles/containers/positioning.css">
 </head>
 <body>
     <div id="app"></div>
